chore: main -> master

--- a/.github/workflows/telegram-bot.yml
+++ b/.github/workflows/telegram-bot.yml
@@ -7,7 +7,7 @@ on:
       - "README.md"
       - "docs/**"
   pull_request:
-    branches: [main]
+    branches: [master]
     paths-ignore:
       - "README.md"
       - "docs/**"
