fix: fixed pipeline

--- a/.github/workflows/telegram-bot.yml
+++ b/.github/workflows/telegram-bot.yml
@@ -2,12 +2,14 @@ name: DMI_bot_deploy
 
 on:
   push:
-    branches: [master]
+    branches:
+      - "main"
     paths-ignore:
       - "README.md"
       - "docs/**"
   pull_request:
-    branches: [master]
+    branches:
+      - "main"
     paths-ignore:
       - "README.md"
       - "docs/**"
