"revert: fixed pipeline"
This reverts commit c009ebc992d38a299a8792586f9f197185904501.

--- a/.github/workflows/telegram-bot.yml
+++ b/.github/workflows/telegram-bot.yml
@@ -2,14 +2,12 @@ name: DMI_bot_deploy
 
 on:
   push:
-    branches:
-      - "main"
+    branches: [master]
     paths-ignore:
       - "README.md"
       - "docs/**"
   pull_request:
-    branches:
-      - "main"
+    branches: [master]
     paths-ignore:
       - "README.md"
       - "docs/**"
