--- a/webapp/package.json
+++ b/webapp/package.json
@@ -2,7 +2,7 @@
   "devDependencies": {
     "@parcel/packager-raw-url": "2.12.0",
     "@parcel/transformer-webmanifest": "2.12.0",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "3.4.10"
   },
   "name": "dmi-bot-webapp",
   "version": "1.0.0",
@@ -13,6 +13,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "parcel": "^2.12.0"
+    "parcel": "2.12.0"
   }
 }
