--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+numpy==1.26.4
 python-telegram-bot==13.8.1
 PyDrive2==1.10.0
 requests==2.26.0
@@ -7,3 +8,4 @@ matplotlib==3.5.0
 pandas==1.3.4
 Pillow==8.4.0
 lxml==4.6.4
+uvicorn==0.30.6
